--- a/src/styles/sass/_variables.scss
+++ b/src/styles/sass/_variables.scss
@@ -70,10 +70,10 @@ $h6-font-size: $font-size-base;
 
 $headings-margin-bottom: $spacer * 2;
 
-$input-btn-padding-y:         .833rem;
-$input-btn-padding-x:         2.222rem;
-$input-btn-padding-y:         .833rem;
-$input-btn-padding-x:         2.222rem;
+$input-btn-padding-y: .833rem;
+$input-btn-padding-x: 1rem;
+$input-border-radius: 0;
+$btn-border-radius: 0;
 
 $dropdown-item-padding-y: $spacer * 0.5;
 $navbar-padding-y: $spacer;
