redux persisted state and fetching data from Brevo API

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -28,6 +28,7 @@
 @import "bootstrap/scss/alert";
 @import "bootstrap/scss/close";
 @import "bootstrap/scss/carousel";
+@import "bootstrap/scss/spinners";
 
 // Helpers
 @import "bootstrap/scss/helpers";
